# sta663-sp26.github.io

./: CLAUDE.md  Makefile  config.yaml  pyproject.toml  website.Rproj
.claude/: settings.json  settings.local.json
data/: schedule.yaml
docs/: index.html  index.xml
docs/categories/: index.xml
docs/slides/: Lec01.html  Lec01.qmd  Lec02-notes.quarto_ipynb  Lec02.html  Lec02.qmd  Lec03.html  Lec03.qmd  Lec04-notes.py  Lec04.qmd  Lec05.html  Lec05.qmd  Lec05_module.py  Lec06.html  Lec07.html  Lec07.qmd  Lec08.qmd  Lec08.quarto_ipynb_1  Lec08.quarto_ipynb_10  Lec08.quarto_ipynb_12  Lec08.quarto_ipynb_13  Lec08.quarto_ipynb_16  Lec08.quarto_ipynb_17  Lec08.quarto_ipynb_19  Lec08.quarto_ipynb_2  Lec08.quarto_ipynb_5  Lec08.quarto_ipynb_6  Lec08.quarto_ipynb_9  Lec09.qmd_  Lec10.html  Lec10.qmd  Lec10_notes.py  Lec11.qmd  Lec12.qmd  Lec13.qmd  Lec13_notes.py  Lec14.qmd  Lec14_bfgs_quad.html  Lec15.qmd  Lec16.qmd  Lec17.qmd  (+24 more)
docs/slides/.ipynb_checkpoints/: scatch-checkpoint.ipynb
docs/slides/Lec05_notes/: Lec05_notes.py  calculate_ci.py
docs/slides/Lec20/: gp  gp.stan  gp2  gp2.stan
docs/slides/data/: gp2.csv
docs/tags/: index.xml
layouts/partials/: schedule.html  syllabus.html  textbooks.html
static/css/: schedule.css
static/slides/: Lec01.html  Lec02-notes.py  Lec02.html  Lec02.qmd  Lec03-notes.py  Lec03.html  Lec03.qmd  Lec04.html  Lec04.qmd  Lec05.html  Lec05.qmd  Lec05_app.py  Lec06.html  Lec06.qmd  Lec06_notes.py  Lec07.qmd  Lec07_gpu.qmd_  Lec07_notes.py  Lec08.quarto_ipynb_11  Lec08.quarto_ipynb_14  Lec08.quarto_ipynb_15  Lec08.quarto_ipynb_18  Lec08.quarto_ipynb_3  Lec08.quarto_ipynb_4  Lec08.quarto_ipynb_7  Lec08.quarto_ipynb_8  Lec09.html  Lec09.qmd  Lec10.qmd  Lec11.qmd  Lec12.qmd  Lec12_notes.py  Lec13.qmd  Lec14.qmd  Lec14_bfgs_quad.html  Lec14_nm_quad.html  Lec14_notes.py  Lec15.qmd  Lec17.qmd  Lec18.qmd  (+13 more)
static/slides/.ipynb_checkpoints/: scatch-checkpoint.ipynb
static/slides/prev/: Lec01.qmd  Lec02.html  Lec02.qmd  Lec03.qmd  Lec04.html  Lec04.qmd  Lec05.qmd  Lec05_notes.py  Lec06.qmd  (+30 more)
(+40 files in other folders)
