[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "blackjax>=1.3",
    "bridgestan>=2.7.0",
    "cmdstanpy>=1.3.0",
    "diffusers>=0.37.1",
    "fastapi[standard]>=0.134.0",
    "fastprogress>=1.1.5",
    "graphviz>=0.21",
    "jax>=0.9.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "numpyro>=0.20.0",
    "nutpie[all,stan]>=0.16.8",
    "optax>=0.2.8",
    "pandas>=3.0.0",
    "patsy>=1.0.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "pyinstrument>=5.1.2",
    "pymc>=5.28.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
    "vetiver>=0.2.6",
]
